objects/project_request_os__c.object
<CustomObject>
    <label>Project Request</label>
    <nameField>
        <label>Project Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Request</relationshipLabel>
        <relationshipName>Project_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Use two digit abreviation</inlineHelpText>
        <label>Country</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <label>Taxable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <inlineHelpText>Destination Cost Center for Revenue credit</inlineHelpText>
        <label>Cost Center</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Request</relationshipLabel>
        <relationshipName>Project_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Notes__c</fullName>
        <description>Add reason why status changed to Needs Information</description>
        <label>Project Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_End__c</fullName>
        <label>Project End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Location__c</fullName>
        <label>New Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information Services</fullName>
                    <default>true</default>
                    <label>Information Services</label>
                </value>
                <value>
                    <fullName>Scientific Services</fullName>
                </value>
                <value>
                    <fullName>Compliance Services</fullName>
                </value>
                <value>
                    <fullName>Relocation Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Milestones</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INF_Opp_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName+&apos; &apos;+Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start__c</fullName>
        <label>Project Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Timing__c</fullName>
        <label>Invoice Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront</fullName>
                    <default>true</default>
                    <label>Upfront</label>
                </value>
                <value>
                    <fullName>In Arrears</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Needs Information</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts_Email__c</fullName>
        <defaultValue>&apos;LASSHL.OneSourceContracts@PERKINELMER.COM&apos;</defaultValue>
        <label>Contracts Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Same_as_Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <label>Current Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Expansion__c</fullName>
        <description>Yes if this is adding onto existing project, No if new project</description>
        <inlineHelpText>Yes if this is adding onto existing project, No if new project</inlineHelpText>
        <label>Project Expansion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Opp_Owner_email__c</fullName>
        <label>Opp Owner email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Original_Project_ID__c</fullName>
        <inlineHelpText>If expansion, add original CRM Project ID</inlineHelpText>
        <label>Original Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Location_City__c</fullName>
        <label>Services Location:  City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_of_Project_Months__c</fullName>
        <inlineHelpText>Length must coincide with duration of PO.  If PO&apos;s issued annually, Length is 12 months</inlineHelpText>
        <label>Length of Project (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS_Contracts_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OS Contracts Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Location_Street__c</fullName>
        <label>Services Location: Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Address Confirmed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>